Implemented 'zkPassToken' verifier

--- a/cabal.project
+++ b/cabal.project
@@ -13,17 +13,30 @@ index-state:
   , hackage.haskell.org 2025-01-13T01:23:22Z
   , cardano-haskell-packages 2025-01-08T16:35:32Z
 
+-- old tag: 81a74ccc4e586924e68a098dd66d62e60aa63b41
 source-repository-package
   type: git
   location: https://github.com/zkFold/symbolic.git
-  tag: 81a74ccc4e586924e68a098dd66d62e60aa63b41
+  tag: 840c2024a0368c1147cf5074c759de5cd51c85a6
   subdir: symbolic-base
 
 source-repository-package
   type: git
   location: https://github.com/zkFold/symbolic.git
-  tag: 81a74ccc4e586924e68a098dd66d62e60aa63b41
+  tag: 840c2024a0368c1147cf5074c759de5cd51c85a6
   subdir: symbolic-cardano
+
+source-repository-package
+  type: git
+  location: https://github.com/zkFold/zkfold-cardano.git
+  tag: aff430f103cb3a674fadfd48ed8ea962482ce236
+  subdir: zkfold-cardano
+
+source-repository-package
+  type: git
+  location: https://github.com/zkFold/zkfold-cardano.git
+  tag: aff430f103cb3a674fadfd48ed8ea962482ce236
+  subdir: zkfold-example
 
 package cardano-crypto-praos
   flags: -external-libsodium-vrf
