--- a/zkpass-cardano.cabal
+++ b/zkpass-cardano.cabal
@@ -70,9 +70,11 @@ library
   import:           lang-extra
   default-language: Haskell2010
   exposed-modules:
+    ZkPass.Cardano.Example.IdentityCircuit,
     ZkPass.Cardano.UPLC.ZkPassToken
   hs-source-dirs:   src
   build-depends:
+    aeson                          ,
     base                >=4.9 && <5,
     plutus-core             ^>=1.36,
     plutus-ledger-api       ^>=1.36,
@@ -94,24 +96,11 @@ executable zkPassToken-init-transaction
     base              >= 4.9 && < 5,
     bytestring                     ,
     directory                      ,
+    filepath                       ,
+    random                         ,
     zkfold-cardano                 ,
-    zkfold-example                 ,
     zkpass-cardano                 ,
     QuickCheck                     ,
-
-executable zkPassToken-transfer-transaction
-  import:           lang
-  import:           lang-extra
-  default-language: Haskell2010
-  ghc-options:      -rtsopts
-  main-is:          Main.hs
-  hs-source-dirs:   backends/zkPassToken-transfer-transaction
-  build-depends:
-    base              >= 4.9 && < 5,
-    bytestring                     ,
-    cardano-api                    ,
-    cborg                          ,
-    parsec                         ,
 
 executable zkPassToken-minting-transaction
   import:           lang
@@ -125,16 +114,23 @@ executable zkPassToken-minting-transaction
     base              >= 4.9 && < 5,
     bytestring                     ,
     cardano-api                    ,
+    filepath                       ,
     plutus-ledger-api       ^>=1.36,
+    random                         ,
     zkfold-cardano                 ,
-    zkfold-example                 ,
+    zkpass-cardano
 
-
--- common warnings
---     ghc-options: -Wall
-
-
--- Flag Pedantic
---     Description: Enable pedantic build with -Werror
---     Manual: True
---     Default: False
+executable zkPassToken-transfer-transaction
+  import:           lang
+  import:           lang-extra
+  default-language: Haskell2010
+  ghc-options:      -rtsopts
+  main-is:          Main.hs
+  hs-source-dirs:   backends/zkPassToken-transfer-transaction
+  build-depends:
+    base              >= 4.9 && < 5,
+    bytestring                     ,
+    cardano-api                    ,
+    cborg                          ,
+    filepath                       ,
+    parsec                         ,
