Added server endpoints to send reference scripts

--- a/zkpass-cardano.cabal
+++ b/zkpass-cardano.cabal
@@ -8,6 +8,9 @@ maintainer:         info@zkfold.io
 license:            GPL-2.0-or-later
 build-type:         Simple
 
+common warnings
+    ghc-options: -Wall
+
 common lang
   default-language: Haskell2010
   default-extensions:
@@ -85,8 +88,9 @@ library
     zkfold-cardano                 ,
 
 executable zkPassToken-init-transaction
-  import:           lang
-  import:           lang-extra
+  import:           warnings
+--  import:           lang
+--  import:           lang-extra
   default-language: Haskell2010
   ghc-options:      -rtsopts
   main-is:          Main.hs
@@ -119,3 +123,29 @@ executable zkPassToken-minting-transaction
     random                         ,
     zkfold-cardano                 ,
     zkpass-cardano
+
+executable zkpass-server
+    import:           lang
+    import:           lang-extra
+    default-language: Haskell2010
+    ghc-options:      -rtsopts
+    main-is:          Main.hs
+    hs-source-dirs:   app
+    build-depends:
+      aeson                              ,
+      atlas-cardano                      ,
+      base                  >= 4.9 && < 5,
+      cardano-api                        ,
+      http-types                         ,
+      parsec                             ,
+      servant                            ,
+      servant-server                     ,
+      transformers                       ,
+      wai                                ,
+      wai-cors                           ,
+      warp                               ,
+      text                               ,
+      symbolic-base                      ,
+      zkfold-cardano                     ,
+      zkpass-cardano                     ,
+      QuickCheck
