Server: all endpoints tested

--- a/zkpass-cardano.cabal
+++ b/zkpass-cardano.cabal
@@ -137,8 +137,11 @@ executable zkpass-server
       aeson                              ,
       atlas-cardano                      ,
       base                  >= 4.9 && < 5,
+      bytestring                         ,
       cardano-api                        ,
       containers                         ,
+      directory                          ,
+      filepath                           ,
       http-types                         ,
       parsec                             ,
       plutus-ledger-api                  ,
