--- a/zkpass-cardano.cabal
+++ b/zkpass-cardano.cabal
@@ -77,6 +77,7 @@ library
   build-depends:
     aeson                          ,
     base                >=4.9 && <5,
+    bytestring                     ,
     plutus-core             ^>=1.36,
     plutus-ledger-api       ^>=1.36,
     plutus-tx               ^>=1.36,
